...
    case notOwner
    case unknown(Error)

    var errorDescription: String? {
        switch self {
        case .notAuthenticated:
            return "You must be signed in to comment"
        case .noGuild:
            return "You must be in a guild to comment"
        case .commentTooLong:
            return "Comment exceeds \(Comment.maxCharacterCount) characters"
        case .emptyComment:
            return "Comment cannot be empty"
        case .notFound:
            return "Comment not found"
...
